[package]
name = "holographics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.1", features = ["aio", "r2d2", "tokio-comp"] }
serde_json = "1.0.89"
serde = "1.0.148"
async-graphql = { version = "5.0.2" }
async-graphql-axum = "5.0.2"
axum = "0.6.1"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.3.5", features = ["cors"] }
lazy_static = "1.4.0"
reqwest = { version= "0.11.13", features = ["json"] }
async-trait = "0.1.59"
async_once = "0.2.6"
serde-aux = "4.1.2"
seahash = "4.1.0"
indexmap = "1.9.2"